WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19968
Slow Script at www.huffingtonpost.com
https://bugs.webkit.org/show_bug.cgi?id=19968
Summary
Slow Script at www.huffingtonpost.com
daniel lager
Reported
2008-07-09 18:08:44 PDT
A script on the page "Breaking News and Opinion on The Huffington Post" (
http://www.huffingtonpost.com/
) is making Safari unresponsive. Do you want to continue running the script, or stop it? I am running Mac OS X 10.4.11 with all Software Updates (most recent being Security Update 2008-4, Intel) on a MacBook (2 Ghz, 1 Meg Ram). Running Nightly Build of Webkit (
r35075
). Message above appears when visiting huffingtonpost. Comes up every time i visit. It takes about 1-2 minutes before it appears. When I hit "Stop running Script" the message continues to pop up every few seconds.
Attachments
Finally fixed the accursed thing
(3.34 KB, patch)
2008-09-24 00:19 PDT
,
Oliver Hunt
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2008-09-24 00:19:44 PDT
Created
attachment 23740
[details]
Finally fixed the accursed thing
Maciej Stachowiak
Comment 2
2008-09-24 00:20:57 PDT
Comment on
attachment 23740
[details]
Finally fixed the accursed thing r=me
Oliver Hunt
Comment 3
2008-09-24 00:42:18 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M JavaScriptCore/ChangeLog M JavaScriptCore/VM/Machine.cpp M JavaScriptCore/VM/Machine.h M JavaScriptCore/kjs/JSGlobalObject.cpp Committed
r36843
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug